# autoresearch-polymarket

./: .env.example  .gitignore  Polymarket-History-2026-04-06.csv  README.md  README.zh-TW.md  autoresearch_local.py  backtest.py  config.example.json  config.json  fast_evolve.py  paper_returns.py  pyproject.toml  spawn_army.py  spawn_wave2.py  strategy_factory.py
examples/: README.md
src/: codex_cli.py  config.py  dashboard.py  io_utils.py  main.py  memory_utils.py  model_cli.py  shared_knowledge.py  trustworthy_runtime.py
src/coordinator/: crossover.py  leaderboard.py  spawner.py  tournament.py
src/data_layer/: binance_ws.py  collector.py  polymarket_ws.py  rest_poller.py  retention.py  round_manager.py
src/runner/: agent_correlation.py  agent_runner.py  backtester.py  decision_tracker.py  ensemble.py  evolver.py  fast_fail.py  health_monitor.py  outcome_analyzer.py  paper_execution.py  predictor.py
tests/: test_agent_correlation.py  test_agent_runner.py  test_binance_ws.py  test_collector.py  test_config.py  test_crossover.py  test_decision_tracker.py  test_evolver.py  test_fast_fail.py  test_health_monitor.py  test_integration.py  test_io_utils.py  test_leaderboard.py  test_main.py  test_model_cli.py  test_outcome_analyzer.py  test_paper_execution.py  test_paper_returns.py  test_polymarket_ws.py  test_predictor.py  test_rest_poller.py  test_retention.py  test_round_manager.py  test_shared_knowledge.py  test_spawner.py  test_tournament.py
